apps/whyrr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whyrr
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik-traefik
  tls:
  - hosts:
    - whyrr.home.bstjohn.net
    - whyrr.ext.bstjohn.net
    secretName: wildcard-home-tls
  rules:
  - host: whyrr.home.bstjohn.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whyrr
            port:
              number: 80
  - host: whyrr.ext.bstjohn.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whyrr
            port:
              number: 80
